# HerokuTest

./: .eslintrc.js  Pipfile  Procfile  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: settings.py  urls.py  utils.py
buyer/: admin.py  models.py  serializers.py  urls.py  views.py
buyer/migrations/: 0001_initial.py  0002_auto_20191105_1940.py  0003_auto_20191112_1640.py
cart/: admin.py  models.py  serializers.py  views.py
cart/migrations/: 0001_initial.py  0002_delete_order.py
core/: serializers.py  views.py
environmentalProject/: admin.py  apps.py  models.py  serializers.py  views.py
environmentalProject/migrations/: 0001_initial.py  0002_auto_20191014_0838.py  0003_environmentalproject_image.py
mainContent/: admin.py  models.py  serializers.py  urls.py  views.py
mainContent/migrations/: 0001_initial.py  0002_auto_20191016_1101.py  0003_auto_20191107_1506.py
product/: admin.py  models.py  serializers.py  views.py
product/migrations/: 0001_initial.py  0002_auto_20191104_1050.py  0003_auto_20191104_1052.py
public/: index.html
sendemail/: admin.py  models.py
sendemail/migrations/: 0001_initial.py  0002_auto_20191103_1631.py
src/: App.js  config.js  styles.scss  variables.scss
src/components/Auth/: index.js
src/components/Buyer/: index.js  index.module.scss
src/components/BuyerForm/: index.js  index.module.scss
src/components/Buyers/: index.js
src/components/CartForm/: index.js  (+1 more)
steps/: admin.py  models.py  serializers.py  views.py
steps/migrations/: 0001_initial.py  0002_steps_icon.py
(+46 files in other folders)
