[tool.poetry]
name = "prodexamensarbete"
version = "0.1.0"
description = ""
authors = ["Maria Eidland"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tool-yy = "´\b"
django = "^2.2"
djangorestframework = "^3.10"
whitenoise = "^4.1"
gunicorn = "^20.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
django-bagou = "\b"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
